--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,40 @@
-body {
-  background-color: #292929;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 0 48px;
-}
-
-.add-task,
-.task-item {
-  background-color: rgba(255, 255, 255, 0.24);
-  padding: 16px 32px;
-  font-weight: 500;
-  font-style: normal;
-  font-size: 32px;
-  line-height: 40px;
-  letter-spacing: -3.8;
-  color: #ffffff;
-}
-
-.add-task {
-  margin-top: 48px;
-  width: 100%;
-  height: 72px;
-  outline: none;
-  border: none;
-  border-radius: 64px;
-}
-
-.add-task::placeholder {
-  color: rgba(255, 255, 255, 0.56);
-}
-
-.notes {
-  margin: 36px 0 144px;
-  padding: 0;
-  list-style: none;
-}
-
-.task-item {
-  margin-bottom: 24px;
-  border-radius: 24px;
+.c-button {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: inline-block;
+  font: 400 11px system-ui;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+  margin-top: 20px;
+  text-transform: uppercase;
 }
 
-.done-note {
-  flex-shrink: 0;
-  width: 24px;
-  height: 24px;
+.btn-group button {
+  background-color: #04AA6D; /* Зеленый фон */
+  border: 1px solid green; /* Зеленая рамка */
+  color: white; /* Белый текст */
+  padding: 50px 50px; /* Некоторый отступ */
+  cursor: pointer; /* Иконка указателя/руки */
+  float: left; /* Выстраиваем кнопки рядом друг с другом */
+  margin-top: 210px;
+  margin-left: 75px;
+  color: #222;
+  font: bold 25px Arial;
 }
+
+.btn-group button:not(:last-child) {
+  border-right: none; /* Исключаем двойную рамку */
+}
+
+/* Сбрасываем обтекание (clearfix hack) */
+.btn-group:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Добавляем фон при наведении курсора */
+.btn-group button:hover {
+  background-color: #00784a;
+}
+
