--- a/src/App.css
+++ b/src/App.css
@@ -74,10 +74,13 @@
   background: #a6c19d;
   font: bold 25px Arial;
   color: green;
-  margin: 20px;
   border-radius: 4px;
   text-align: center;
   padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 0 auto;
+  transform: translateX(-32%);
 }
 
 .cardsOn {
@@ -86,10 +89,10 @@
   background: #61a4e7;
   font: bold 25px Arial;
   color: blue;
-  margin: 20px;
   border-radius: 4px;
   text-align: center;
   padding: 20px;
+  transform: translateX(-32%);
 }
 
 .cardsButton{
@@ -100,6 +103,7 @@
   font-weight: bold;
   border-radius: 50px;
   text-align: center;
+  
 }
 
 .outer-div
@@ -109,13 +113,14 @@
 .inner-div
 {
      margin: auto;
-     width: 400px;
+     width: 300px;
      height: 100px;  
 }
 
 .divModes{
-  margin: auto;
-  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 6em
 }
 
 .heading {
@@ -176,4 +181,18 @@
 
 [data-hint]:hover::after {
     opacity: 1;
+}
+.background {
+    text-align: center; 
+}    
+.transparent {
+    font-family: Tahoma, sans-serif;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 150px;
+    text-transform: uppercase;
+    color: #FFF;
+    mix-blend-mode: multiply;
+    display: inline-block;
+    /* text-shadow: 0 0 8px rgba(0,0,0,5), 0 2px 4px rgba(0,0,0,0.7); */
 }
