--- a/src/App.css
+++ b/src/App.css
@@ -1,123 +1,28 @@
-/* .c-button {
-  display: flex;
-  display: inline-block;
-  font: 400 11px system-ui;
-  position: relative;
-  left: 50%;
-  transform: translate(-50%, 0);
-  margin-top: 20px;
-  text-transform: uppercase;
-} */
-
-@media (max-width: 400px) {
-  .btn-group button {
-    margin-left: 33%;
-  }
-}
-
-@media (min-width: 400px) and (max-width: 429px) {
-  .btn-group button {
-    margin-left: 13%;
-  }
-}
-
-@media (min-width: 429px) and (max-width: 500px) {
-  .btn-group button {
-    margin-left: 15%;
-  }
-}
-
-@media (min-width: 500px) and (max-width: 550px) {
-  .btn-group button {
-    margin-left: 17%;
-  }
-}
-
-@media (min-width: 550px) and (max-width: 600px) {
-  .btn-group button {
-    margin-left: 8%;
-  }
-}
-
-@media (min-width: 600px) and (max-width: 688px) {
-  .btn-group button {
-    margin-left: 10%;
-  }
-}
-
-@media (min-width: 688px) and (max-width: 800px) {
-  .btn-group button {
-    margin-left: 12%;
-  }
-}
-
-@media (min-width: 800px) and (max-width: 850px) {
-  .btn-group button {
-    margin-left: 5%;
-  }
-}
-
-@media (min-width: 850px) and (max-width: 900px) {
-  .btn-group button {
-    margin-left: 3%;
-  }
-}
-
-@media (min-width: 850px) and (max-width: 1300px) {
-  .btn-group button {
-    margin-left: 75px;
-  }
-}
-
-@media (min-width: 1300px) and (max-width: 1500px) {
-  .btn-group button {
-    margin-left: 100px;
-  }
-  body {
-    overflow-y: hidden;
-  }
-}
-
-@media (min-width: 1500px) and (max-width: 1700px) {
-  .btn-group button {
-    margin-left: 125px;
-  }
-  body {
-    overflow-y: hidden;
-  }
-}
-
 ::-webkit-scrollbar {
   display: none;
 }
 
+.btn-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  }
+
 .btn-group button {
-  min-width: 14vh;
   text-align: center;
-  background-color: #04aa6d; /* Зеленый фон */
-  border: 1px solid green; /* Зеленая рамка */
-  color: white; /* Белый текст */
-  padding: 50px 50px; /* Некоторый отступ */
-  cursor: pointer; /* Иконка указателя/руки */
-  /* Выстраиваем кнопки рядом друг с другом */
+  background-color: #04aa6d; 
+  border: 1px solid green; 
+  padding: 50px 50px; 
+  flex: 0 0 150px; 
+  margin: 10px; 
+  width: 15vh;
+  height: 10vh;
   margin-top: 50px;
   float: left;
   color: #222;
-  font: bold 25px Arial;
+  font: bold 235% Arial;
 }
 
-.btn-group button:not(:last-child) {
-  border-right: none; /* Исключаем двойную рамку */
-}
-
-/* Сбрасываем обтекание (clearfix hack) */
-.btn-group:after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-/* Добавляем фон при наведении курсора */
 .btn-group button:hover {
   background-color: #00784a;
 }
@@ -129,67 +34,90 @@
 
 .btn-group1 button {
   text-align: center;
-  min-width: 10vh;
-  min-height: 3vh;
-  background-color: #8bbd41; /* Зеленый фон */
-  margin-top: 50px;
+  min-width: 8vh;
+  min-height: 2vh;
+  background-color: #8bbd41; 
+  margin-top: 5px;
+  margin-left: 10px;
   color: #222;
   font: bold 3vh Arial;
 }
 
-/* Добавляем фон при наведении курсора */
 .btn-group1 button:hover {
   background-color: #366a1a;
 }
 
 .btn-group2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   text-align: center;
 }
 
 .btn-group2 button {
-  text-align: center;
-  min-width: 25vh;
-  min-height: 10vh;
-  background-color: rgb(186, 126, 229); /* Зеленый фон */
+  min-width: 15vh;
+  min-height: 5vh;
+  background-color: rgb(186, 126, 229);
   color: white;
   font: bold 3vh Arial;
   margin-top: 2vh;
+  flex: 0 0 150px; 
+  margin: 10px; 
+  width: 25vh;
+  height: 10vh;
 }
 
-/* Добавляем фон при наведении курсора */
 .btn-group2 button:hover {
   background-color: #7729c0;
 }
 
+.btn-group3 {
+  text-align: center;
+}
+
+.btn-group3 button {
+  text-align: center;
+  min-width: 15vh;
+  min-height: 5vh;
+  background-color: rgb(186, 126, 229);
+  color: white;
+  font: bold 3vh Arial;
+  margin-top: 20vh;
+}
+
+.btn-group3 button:hover {
+  background-color: #7729c0;
+}
+
 .cardsOff {
-  min-width: 40%;
-  min-height: 25vh;
+  backface-visibility: hidden;
+  min-width: 45vh;
+  min-height: 35vh;
   background: #a6c19d;
-  width: 250px;
-  overflow-wrap: break-word;  
-  word-wrap: break-word; 
+  overflow-wrap: break-word;
+  word-wrap: break-word;
   word-break: break-word;
-  font: bold 5vh Arial;
+  font: bold 3vh Arial;
   color: green;
-  border-radius: 4px;
   padding: 2vh;
   text-align: center;
   position: absolute;
-  transform: translate(-50%, 10%);
+  transform: translate(-50%, 5%);
   top: 50%;
   left: 50%;
 }
 
 .cardsOn {
-  min-width: 40%;
-  min-height: 25vh;
+  backface-visibility: hidden;
+  min-width: 45vh;
+  min-height: 35vh;
   width: 250px;
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
   background: #61a4e7;
   white-space: normal;
-  font: bold 5vh Arial;
+  font: bold 3vh Arial;
   color: blue;
   padding: 2vh;
   text-align: center;
@@ -211,7 +139,6 @@
 .divModes {
   margin-left: auto;
   margin-right: auto;
-  /* width: 10em; */
   transform: translate(-50%, 50%);
   position: absolute;
   left: 50%;
@@ -225,12 +152,9 @@ input[type="button"] {
   font: bold 40px Arial;
 }
 
-.back {
-  text-align: center;
-}
-
 .heading {
   text-align: center;
+  font: bold 4vh Arial;
 }
 
 .background {
@@ -245,70 +169,4 @@ input[type="button"] {
   color: #fff;
   mix-blend-mode: multiply;
   display: inline-block;
-  /* text-shadow: 0 0 8px rgba(0,0,0,5), 0 2px 4px rgba(0,0,0,0.7); */
-}
-
-@media (min-width: 1700px) and (max-width: 1900px) {
-  .btn-group1 button {
-    font: bold 30px Arial;
-  }
-  body {
-    overflow-y: hidden;
-  }
-  .heading {
-    font: bold 40px Arial;
-    margin-top: 10px;
-  }
-  .btn-group button {
-    font: bold 40px Arial;
-    margin-left: 130px;
-  }
-}
-
-@media (min-width: 1900px) {
-  .btn-group1 button {
-    font: bold 35px Arial;
-  }
-  .back {
-    font: bold 50px Arial;
-  }
-  body {
-    overflow-y: hidden;
-  }
-  .heading {
-    font: bold 50px Arial;
-    margin-top: 10px;
-  }
-  .btn-group button {
-    font: bold 40px Arial;
-    margin-left: 150px;
-  }
-}
-
-@media (min-height: 750px) and (max-height: 1050px) {
-  .back {
-    font: bold 25px Arial;
-  }
-  .heading {
-    font: bold 40px Arial;
-    margin-top: 0px;
-  }
-  .btn-group button {
-    font: bold 40px Arial;
-  }
-}
-@media (min-height: 1050px) and (max-height: 1500px) {
-  body {
-    overflow-y: hidden;
-  }
-  .back {
-    font: bold 30px Arial;
-  }
-  .heading {
-    font: bold 50px Arial;
-    margin-top: 10px;
-  }
-  .btn-group button {
-    font: bold 40px Arial;
-  }
 }
