--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@
 }
 
 .cardsOff {
-  backface-visibility: hidden;
+  /* backface-visibility: hidden; */
   min-width: 45vh;
   min-height: 35vh;
   background: #a6c19d;
@@ -105,10 +105,11 @@
   transform: translate(-50%, 5%);
   top: 50%;
   left: 50%;
+  opacity: 1;
+  transition: opacity;
 }
 
 .cardsOn {
-  backface-visibility: hidden;
   min-width: 45vh;
   min-height: 35vh;
   width: 250px;
@@ -125,7 +126,10 @@
   transform: translate(-50%, 5%);
   top: 0%;
   left: 50%;
+  opacity: 1;
+  transition: opacity;
 }
+
 
 .outer-div {
   padding: 10px;
