--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,15 @@
   color: #222;
   font: bold 3vh Arial;
 }
+.step-cards {
+  text-align: center;
+  min-width: 8vh; 
+  min-height: 2vh;
+  margin-top: 5px;
+  margin-left: 10px;
+  color: hsl(0, 100%, 100%);  
+  font: bold 3vh Arial;
+}
 
 .btn-group1 button:hover {
   background-color: #366a1a;
