--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   display: none;
 }
 
+:root {
+  touch-action: pan-x pan-y;
+  height: 100% 
+}
+
 .btn-group {
   display: flex;
   flex-wrap: wrap;
